--- a/KalypsoModelNA/etc/schema/gml/hydrotopeOverlay.properties
+++ b/KalypsoModelNA/etc/schema/gml/hydrotopeOverlay.properties
@@ -7,7 +7,7 @@ http___sourceforge.kalypso.org_schemata_hydrology_suds=rrmSuds
 http___sourceforge.kalypso.org_schemata_hydrology_landuse=rrmLanduse
 rrmHydo_OverlayCollection_label=Overlays
 rrmHydo_OverlayCollection_description=Overlay Collection
-rrmHydo_OverlayElement_label=Overlay Element
+rrmHydo_OverlayElement_label=${listProperty\:http\://www.opengis.net/gml\#name;0;-no name-}
 rrmHydo_OverlayElement_description=Overlay Element
 rrmHydo_OverlayElement_rrmHydo_lnkDefinition_label=DRWBM Definition
 rrmHydo_OverlayElement_rrmHydo_lnkDefinition_description=Linked DRWBM Definition
