--- a/KalypsoModelNA/etc/schema/gml/pedologie.properties
+++ b/KalypsoModelNA/etc/schema/gml/pedologie.properties
@@ -7,7 +7,7 @@ rrmPedo_SoiltypeCollection_label=Soil Type Collection
 rrmPedo_SoiltypeCollection_rrmPedo_soiltypeMember_label=Soil Type Member
 rrmPedo_SoiltypeCollection_rrmPedo_soiltypeMember_tooltip=Soil Type Member
 rrmPedo_Soiltype_description=Soil Type
-rrmPedo_Soiltype_label=Soil Type
+rrmPedo_Soiltype_label=${listProperty\:http\://www.opengis.net/gml\#name;0;-no name-}
 rrmPedo_Soiltype_rrmPedo_location_label=Location
 rrmPedo_Soiltype_rrmPedo_location_tooltip=Location
 rrmPedo_Soiltype_rrmPedo_soilTypeLink_label=Soil Type
