Changed hydrotopes templates according to schema changes

--- a/KalypsoUIRRM/src/org/kalypso/ui/rrm/catalog/templatemessages.properties
+++ b/KalypsoUIRRM/src/org/kalypso/ui/rrm/catalog/templatemessages.properties
@@ -20,6 +20,11 @@ hydrotop.gmt.geology=Geology
 hydrotop.gmt.overlay=Overlay (SUDS)
 hydrotop.gmt.hydrotopes=Hydrotopes
 
+hydrotopes.gft.group.commonProperties=General Properties
+hydrotopes.gft.group.links=Links
+hydrotopes.gft.group.deprecatedValues=Values
+hydrotopes.gft.label.deprecatedValues=Explicit value input. Only for backwards compatibility. Used only, if the corresponding references to input elements are not set. 
+
 modelNet.gmt.map.name=Net
 modelNet.gmt.nodes=Nodes - Net
 modelNet.gmt.virtualStrands=Virtual Strands - Net
