--- a/trunk/KalypsoModelNA/etc/schema/gml/hydrotop.properties
+++ b/trunk/KalypsoModelNA/etc/schema/gml/hydrotop.properties
@@ -5,22 +5,22 @@ http___sourceforge.kalypso.org_schemata_hydrology_hydrotope=rrmHydrotop
 http___www.tuhh.de_kalypsoNA=rrm
 rrmHydrotop_Hydrotope_description=Hydrotop
 rrmHydrotop_Hydrotope_label=Hydrotope
-rrmHydrotop_Hydrotope_rrmHydrotop_area_label=Area
-rrmHydrotop_Hydrotope_rrmHydrotop_area_tooltip=Area of the Hydrotope [m²]
+rrmHydrotop_Hydrotope_rrmHydrotop_area_label=Area [m²]
+rrmHydrotop_Hydrotope_rrmHydrotop_area_tooltip=Area of the Hydrotope [m²] (used, if hydrotope does not contain a geometry)
 rrmHydrotop_Hydrotope_rrmHydrotop_corrSealing_label=Sealing Rate Correction
-rrmHydrotop_Hydrotope_rrmHydrotop_corrSealing_tooltip=Correction Coefficient of Sealing Rate [-]
+rrmHydrotop_Hydrotope_rrmHydrotop_corrSealing_tooltip=Correction Coefficient of Sealing Rate [-] (Product of sub-catchment sealing factor and landuse sealing, only used, if link to landuse or link to sub-catchment not set)
 rrmHydrotop_Hydrotope_rrmHydrotop_landuse_label=Landuse Type
-rrmHydrotop_Hydrotope_rrmHydrotop_landuse_tooltip=Landuse Type
+rrmHydrotop_Hydrotope_rrmHydrotop_landuse_tooltip=Landuse Type (only used, if link to landuse not set)
 rrmHydrotop_Hydrotope_rrmHydrotop_landuseLink_label=Landuse
 rrmHydrotop_Hydrotope_rrmHydrotop_landuseLink_tooltip=Link to landuse
-rrmHydrotop_Hydrotope_rrmHydrotop_gwInflowRate_label=Groundwater Inflow
-rrmHydrotop_Hydrotope_rrmHydrotop_gwInflowRate_tooltip=Groundwater Inflow Rate of [-] (\= 0-1)
-rrmHydrotop_Hydrotope_rrmHydrotop_maxPerc_label=Max. Percolation Rate
-rrmHydrotop_Hydrotope_rrmHydrotop_maxPerc_tooltip=Maximal Percolation Rate [m/s]
-rrmHydrotop_Hydrotope_rrmHydrotop_position_label=Location
-rrmHydrotop_Hydrotope_rrmHydrotop_position_tooltip=Location
+rrmHydrotop_Hydrotope_rrmHydrotop_gwInflowRate_label=Groundwater Inflow Rate
+rrmHydrotop_Hydrotope_rrmHydrotop_gwInflowRate_tooltip=Groundwater Inflow Rate of [-] (\= 0-1) Type (only used, if link to geology not set)
+rrmHydrotop_Hydrotope_rrmHydrotop_maxPerc_label=Max. Percolation Rate [m/s]
+rrmHydrotop_Hydrotope_rrmHydrotop_maxPerc_tooltip=Maximal Percolation Rate [m/s] Type (only used, if link to geology not set)
+rrmHydrotop_Hydrotope_rrmHydrotop_position_label=Geometry
+rrmHydrotop_Hydrotope_rrmHydrotop_position_tooltip=Geometry
 rrmHydrotop_Hydrotope_rrmHydrotop_soiltype_label=Soil Type
-rrmHydrotop_Hydrotope_rrmHydrotop_soiltype_tooltip=Soil Type
+rrmHydrotop_Hydrotope_rrmHydrotop_soiltype_tooltip=Soil Type (only used, if link to pedology not set)
 rrmHydrotop_Hydrotope_rrmHydrotop_pedologyLink_label=Pedology
 rrmHydrotop_Hydrotope_rrmHydrotop_pedologyLink_tooltip=Link to pedology
 rrmHydrotop_Hydrotope_rrmHydrotop_geologyLink_label=Geology
@@ -31,7 +31,5 @@ rrmHydrotop_HydrotopeCollection_rrmHydrotop_hydrotopeMember_label=hydrotopMember
 rrmHydrotop_HydrotopeCollection_rrmHydrotop_hydrotopeMember_tooltip=hydrotopMember
 rrmHydrotop_Hydrotope_rrm_catchmentLinkMember_label=Catchment
 rrmHydrotop_Hydrotope_rrm_catchmentLinkMember_tooltip=Link to catchment
-rrmHydrotop_Hydrotope_rrmHydrotop_lnkDefinition_label=SUDS definition
-rrmHydrotop_Hydrotope_rrmHydrotop_lnkDefinition_tooltip=Reference to SUDS definition
 rrmHydrotop_Hydrotope_rrmHydrotop_overlayLink_label=Overlay Element
 rrmHydrotop_Hydrotope_rrmHydrotop_overlayLink_tooltip=Link to Overlay Element
