--- a/trunk/KalypsoModelNA/etc/schema/gml/namodell.properties
+++ b/trunk/KalypsoModelNA/etc/schema/gml/namodell.properties
@@ -102,8 +102,14 @@ rrm_Catchment_rrm_verdunstungZR_label=Timeseries V local
 rrm_Catchment_rrm_verdunstungZR_tooltip=Timeseries V local
 rrm_Catchment_rrm_zft_label=time area function
 rrm_Catchment_rrm_zft_tooltip=time area function
+
 rrm_Catchment_rrm_corrSealing_label=Sealing Rate Correction
-rrm_Catchment_rrm_corrSealing_tooltip=Correction Coefficient of Sealing Rate [-]
+rrm_Catchment_rrm_corrSealing_tooltip=Correction coefficient of sealing rate [-] (> 0.0)
+rrm_Catchment_rrm_corrMaxPerc_label=Max. Percolation Correction
+rrm_Catchment_rrm_corrMaxPerc_tooltip=Correction coefficient of maximal Percolation [-] (> 0.0)
+rrm_Catchment_rrm_corrGWInflowRate_label=Groundwater Inflow Correction
+rrm_Catchment_rrm_corrGWInflowRate_tooltip=Correction coefficient of groundwater inflow rate [-] (> 0.0)
+
 rrm_ChannelCollection_description=Strandlist
 rrm_ChannelCollection_label=Strandlist
 rrm_ChannelCollection_rrm_channelMember_label=has
