--- a/trunk/KalypsoModelNA/etc/schema/gml/control.properties
+++ b/trunk/KalypsoModelNA/etc/schema/gml/control.properties
@@ -29,7 +29,7 @@ rrmMeta_NAControl_rrmMeta_minutesTimestep_tooltip=Calculation time interval [min
 rrmMeta_NAControl_rrmMeta_pns_label=Synthetic Precipitation
 rrmMeta_NAControl_rrmMeta_pns_tooltip=Calculation based on synthetic precipitation
 rrmMeta_NAControl_rrmMeta_returnPeriod_label=Return interval
-rrmMeta_NAControl_rrmMeta_returnPeriod_tooltip=Return interval (optional)
+rrmMeta_NAControl_rrmMeta_returnPeriod_tooltip=Return interval (only as information, optional)
 rrmMeta_NAControl_rrmMeta_endsimulation_label=Simulation End
 rrmMeta_NAControl_rrmMeta_endsimulation_tooltip=End of the model simulation
 rrmMeta_NAControl_rrmMeta_startsimulation_label=Simulation Start
