--- a/KalypsoModel1D2D/plugin.xml
+++ b/KalypsoModel1D2D/plugin.xml
@@ -668,6 +668,22 @@
         modelPath="models/control.gml" />
       <scenarioDatum classKey="org.kalypso.kalypsomodel1d2d.schema.binding.discr.IFEDiscretisationModel1d2d"
         modelPath="models/discretisation.gml" />
+     <scenarioDatum
+           classKey="org.kalypso.kalypsosimulationmodel.core.roughness.IRoughnessClsCollection"
+           modelPath="project:/.metadata/roughness.gml">
+     </scenarioDatum>
+     <scenarioDatum
+           classKey="org.kalypso.kalypsosimulationmodel.core.flowrel.IFlowRelationshipModel"
+           modelPath="models/flowrelations.gml">
+     </scenarioDatum>
+     <scenarioDatum
+           classKey="org.kalypso.kalypsosimulationmodel.core.terrainmodel.ITerrainModel"
+           modelPath="models/terrain.gml">
+     </scenarioDatum>
+     <scenarioDatum
+           classKey="org.kalypso.kalypsosimulationmodel.core.wind.IWindModel"
+           modelPath="models/wind.gml"> 
+     </scenarioDatum>
     </dataSet>
   </extension>
 
