--- a/KalypsoModelSimulationBase/plugin.xml
+++ b/KalypsoModelSimulationBase/plugin.xml
@@ -110,5 +110,14 @@
             name="BaseMap"
             project="false"/>
     </extension>
+    <extension
+          point="org.kalypso.ui.addLayerWizard">
+       <wizard
+             class="org.kalypso.kalypsosimulationmodel.internal.ui.map.ImportShapeWorkflowWizard"
+             icon="icons/file_shp.gif"
+             id="shapeImportWorkflow"
+             name="ESRI (tm) Shape">
+       </wizard>
+    </extension>
 
 </plugin>
