--- a/trunk/KalypsoModelSimulationBase/plugin.xml
+++ b/trunk/KalypsoModelSimulationBase/plugin.xml
@@ -110,13 +110,20 @@
             name="BaseMap"
             project="false"/>
     </extension>
-    <extension
-          point="org.kalypso.ui.addLayerWizard">
+    <extension point="org.kalypso.ui.addLayerWizard">
        <wizard
              class="org.kalypso.kalypsosimulationmodel.internal.ui.map.ImportShapeWorkflowWizard"
              icon="icons/file_shp.gif"
              id="shapeImportWorkflow"
              name="ESRI (tm) Shape">
+         <description>Eine ESRI Shape Datei als Thema hinufügen.</description>
+       </wizard>
+       <wizard
+             class="org.kalypso.kalypsosimulationmodel.internal.ui.map.ImportImageWorkflowWizard"
+             icon="icons/file_image.gif"
+             id="imageImportWorkflow"
+             name="Georeferenced Image (TIFF, JPG, PNG)">
+             <description>Eine georeferenziertes Bild (.tiff, .jpg, .png, ...) als Thema hinzufügen.</description>
        </wizard>
     </extension>
 
