Added max. percolation and gwInflowRate to drwbm definition. Fixed gft and gtt

--- a/KalypsoModelNA/etc/schema/gml/geologie.properties
+++ b/KalypsoModelNA/etc/schema/gml/geologie.properties
@@ -13,4 +13,4 @@ rrmGeo_Geology_rrmGeo_location_tooltip=Location
 rrmGeo_Geology_rrmGeo_gwInflowRate_label=Inflow rate GW
 rrmGeo_Geology_rrmGeo_gwInflowRate_tooltip=Groundwater Inflow Rate [-] (\= 0-1)
 rrmGeo_Geology_rrmGeo_maxPerc_label=Max. Percolation Rate
-rrmGeo_Geology_rrmGeo_maxPerc_tooltip=Maximal Percolation Rate [m/s]
+rrmGeo_Geology_rrmGeo_maxPerc_tooltip=Maximal Percolation Rate [mm/d]
