--- a/KalypsoModelNA/etc/schema/gml/parameter.properties
+++ b/KalypsoModelNA/etc/schema/gml/parameter.properties
@@ -88,8 +88,12 @@ rrmParam_DRWBMSoilLayerParameter_rrmParam_widthOfArea_tooltip=Width of area [m]
 rrmParam_DRWBMDefinition_label=${listProperty\:http\://www.opengis.net/gml\#name;0;description doesn't exists}
 rrmParam_DRWBMDefinition_rrmParam_soilLayerLink_label=DRWBM Soil Type
 rrmParam_DRWBMDefinition_rrmParam_soilLayerLink_tooltip=Linked DRWBM Soil Type
-rrmParam_DRWBMDefinition_rrmParam_landuseclassLink_label=Linked DRWBM Landuse Class
-rrmParam_DRWBMDefinition_rrmParam_landuseclassLink_tooltip=Linked DRWBM Landuse Class
+rrmParam_DRWBMDefinition_rrmParam_landuseclassLink_label=Linked Landuse Class
+rrmParam_DRWBMDefinition_rrmParam_landuseclassLink_tooltip=Linked Landuse Class
+rrmParam_DRWBMDefinition_rrmParam_gwInflowRate_label=Inflow rate GW
+rrmParam_DRWBMDefinition_rrmParam_gwInflowRate_tooltip=Groundwater Inflow Rate [-] (\= 0-1)
+rrmParam_DRWBMDefinition_rrmParam_maxPerc_label=Max. Percolation Rate
+rrmParam_DRWBMDefinition_rrmParam_maxPerc_tooltip=Maximal Percolation Rate [m/s]
 rrmParam_DRWBMSoiltype_label=${property\:http\://www.opengis.net/gml\#description;description doesn't exists}
 rrmParam_DRWBMSoilLayerParameter_rrmParam_drainagePipeKFvalue_label=Permeability Drainage Pipe [KF-Value]
 rrmParam_DRWBMSoilLayerParameter_rrmParam_drainagePipeKFvalue_tooltip=Permeability of Drainage Pipe as KF-Value
