Added maxPErc and gwINflowRate to drwbm-definitions. Removed isSealed from drwm-parameters. If overlay is set, then its parameters now always overrule the normal hydrotope parameters.

--- a/KalypsoModelNA/plugin.xml
+++ b/KalypsoModelNA/plugin.xml
@@ -317,6 +317,8 @@
               class="org.kalypso.model.hydrology.binding.parameter.SoilLayerParameter"
               qname="{http://www.tuhh.de/parameter}SoilLayerParameter">
         </feature>
+        <feature class="org.kalypso.model.hydrology.binding.parameter.DRWBMDefinition" qname="{http://www.tuhh.de/parameter}DRWBMDefinition">
+        </feature>
         <feature
               class="org.kalypso.model.hydrology.binding.parameter.DRWBMSoiltype"
               qname="{http://www.tuhh.de/parameter}DRWBMSoiltype">
