compare of scenarios during merge scenarios, simulation renameing extension control (does not rename the folder at the momend)

--- a/KalypsoUIRRM/plugin.xml
+++ b/KalypsoUIRRM/plugin.xml
@@ -757,6 +757,10 @@
           class="org.kalypso.ui.rrm.internal.simulations.SimulationCalculationFeatureControlFactory"
           id="simulationCalculationFeatureControl">
     </extensionControl>
+    <extensionControl
+          class="org.kalypso.ui.rrm.internal.simulations.SimulationDescriptionFeatureControlFactory"
+          id="simulationDescriptionFeatureControl">
+    </extensionControl>
  </extension>
  <extension
        point="org.eclipse.ui.menus">
