--- a/KalypsoUIRRM/plugin.xml
+++ b/KalypsoUIRRM/plugin.xml
@@ -761,6 +761,10 @@
           class="org.kalypso.ui.rrm.internal.simulations.SimulationDescriptionFeatureControlFactory"
           id="simulationDescriptionFeatureControl">
     </extensionControl>
+    <extensionControl
+          class="org.kalypso.ui.rrm.internal.simulations.InitialValueFeatureControlFactory"
+          id="initialValueFeatureControl">
+    </extensionControl>
  </extension>
  <extension
        point="org.eclipse.ui.menus">
