--- a/KalypsoModelNA/plugin.properties
+++ b/KalypsoModelNA/plugin.properties
@@ -1,3 +1,3 @@
 #Properties file for KalypsoModelNA
 Bundle-Vendor = kalypso.sourceforge.net
-Bundle-Name = KalypsoNACalcJob
+Bundle-Name = org.kalypso.model.rrm.core
