Fixed: case.xml missing in release

--- a/KalypsoModelRRMProjectTemplates/build.properties
+++ b/KalypsoModelRRMProjectTemplates/build.properties
@@ -10,7 +10,8 @@ bin.includes = .project,\
                Basis/,\
                .model/,\
                .settings/,\
-               build.properties
+               build.properties,\
+               .metadata/
 src.includes = plugin_de.properties,\
                plugin.xml,\
                plugin.properties,\
@@ -21,4 +22,6 @@ src.includes = plugin_de.properties,\
                .project,\
                about.html,\
                nl/,\
-               Basis/
+               Basis/,\
+               .metadata/,\
+               .model/
