fixes the problem of export of profiles from 1d2d, now it is possible to select the export type, for profiles from 1d2d should be selected the one with "Profilelines" - this is the reused wizard from wspm.

--- a/KalypsoModel1D2D/plugin.properties
+++ b/KalypsoModel1D2D/plugin.properties
@@ -83,4 +83,6 @@ org.kalypso.model1d2d.removeBuildingParameter.description=Edit Sampling Points
 org.kalypso.model1d2d.saveBuildingParameter.name=Save Changes
 org.kalypso.model1d2d.saveBuildingParameter.description=Save Changes
 
+org.kalypso.model1d2d.exportProfiles.name=Profile lines
+
 org.kalypso.kalypsomodel1d2d.ui.map.function.BorderEdgeFunctionExpression.label=Border-Edges
