Better tooltip for sealing classes

--- a/KalypsoModelNA/etc/schema/gml/parameter.properties
+++ b/KalypsoModelNA/etc/schema/gml/parameter.properties
@@ -34,7 +34,7 @@ rrmParam_Sealing_description=Die Versiegelungsklasse beinhaltet den Versiegelung
 rrmParam_Sealing_description=Sealing class includes the sealing rate of a hydrotope
 rrmParam_Sealing_label=${listProperty\:http\://www.opengis.net/gml\#name;0}
 rrmParam_Sealing_rrmParam_m_vers_label=Sealing Rate
-rrmParam_Sealing_rrmParam_m_vers_tooltip=Sealing rate of landuse [-]
+rrmParam_Sealing_rrmParam_m_vers_tooltip=Sealing rate of landuse (0.0 - 1.0)
 rrmParam_Snow_description=Snow type, which is referenced in the sub catchment (key is the name\!)
 rrmParam_Snow_label=${listProperty\:http\://www.opengis.net/gml\#name;0}
 rrmParam_Snow_rrmParam_xh0_label=Initial Height
