Fixed some labels

--- a/KalypsoModelNA/etc/schema/gml/namodell.properties
+++ b/KalypsoModelNA/etc/schema/gml/namodell.properties
@@ -321,7 +321,7 @@ rrm_bodenschichtkorrektur_rrm_retlay_tooltip=Correction factor Interflow, multip
 rrm_grundwasserabfluss_description=Groundwater Relation
 rrm_grundwasserabfluss_label=Groundwater Relation
 rrm_grundwasserabfluss_rrm_gwwi_label=Groundwater Discharge Fraction
-rrm_grundwasserabfluss_rrm_gwwi_tooltip=Fraction of the groundwater discharge
+rrm_grundwasserabfluss_rrm_gwwi_tooltip=Fraction of the groundwater discharge [%] (total = 100)
 rrm_grundwasserabfluss_rrm_ngwzu_label=Sub Catchment
 rrm_grundwasserabfluss_rrm_ngwzu_tooltip=Groundwater Discharge goes to Sub Catchment (Link)
 rrm_Node_rrm_useResultAsInflow_label=Use 'Result as Inflow'
