Change some gft label

--- a/KalypsoUIRRM/src/org/kalypso/ui/rrm/catalog/templatemessages.properties
+++ b/KalypsoUIRRM/src/org/kalypso/ui/rrm/catalog/templatemessages.properties
@@ -61,7 +61,7 @@ catchment.modelCompletion.gft.group.snow=Snow
 catchment.modelCompletion.gft.group.retentionTranslation=Retention - Translation
 catchment.modelCompletion.gft.group.groundwater=Groundwater
 
-editCalibration.gft.group.catchment.correctionFactor=Correction Factors
+editCalibration.gft.group.catchment.correctionFactor=Common Calibration Parameters
 editCalibration.gft.group.catchment.soilFactors=Correction of Soil Parameters
 editCalibration.gft.group.catchment.retention=Retention and Translation
 
