i18n model na and uirrm

--- a/KalypsoModelNA/etc/schema/gml/parameter.properties
+++ b/KalypsoModelNA/etc/schema/gml/parameter.properties
@@ -30,8 +30,7 @@ rrmParam_Parameter_rrmParam_drwbmSoiltypeMember_label=DRWBM Soil Types
 rrmParam_Parameter_rrmParam_drwbmSoiltypeMember_tooltip=DRWBM Soil Types
 rrmParam_Parameter_rrmParam_drwbmDefinitionMember_label=DRWBM Soil Definitions
 rrmParam_Parameter_rrmParam_drwbmDefinitionMember_tooltip=DRWBM Soil Definitions
-rrmParam_Sealing_description=Die Versiegelungsklasse beinhaltet den Versiegelungsgrad, welch
-rrmParam_Sealing_description=Sealing class includes the sealing rate of a hydrotope
+rrmParam_Sealing_description=The sealing class includes the sealing rate of a hydrotope, which defines the separation of the hydrotopes area in the natural and sealed part.
 rrmParam_Sealing_label=${listProperty\:http\://www.opengis.net/gml\#name;0}
 rrmParam_Sealing_rrmParam_m_vers_label=Sealing Rate
 rrmParam_Sealing_rrmParam_m_vers_tooltip=Sealing rate of landuse (0.0 - 1.0)
